# FuncMimic

./: README.md  pyproject.toml
funcmimic/: __init__.py  decorators.py  prompts.py
tests/: test_decorator.py
